# nlw-python-image-recognition

./: .gitignore  README.md  main.py  pyproject.toml
gesture-recognition-app/: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
gesture-recognition-app/assets/: script.js  style.css
gesture-recognition-app/core/: __init__.py  models.py  processor.py  utils.py
lenet-5-mnist/: README.md  lenet5.ipynb  main.py  pyproject.toml  requirements.txt
mediapipe-gesture-recognition/: .gitignore  README.md  pyproject.toml  requirements.txt
mediapipe-gesture-recognition/notebooks/: image_segmentation.ipynb  send_image_to_gemini.ipynb
mediapipe-gesture-recognition/src/: collect_hand_data.py  hand_landmarks_data.csv  main.py  train_gesture_model.py  webcam_object_detection.py
